Apportate modifiche generali al sito web

--- a/contatti/index.html
+++ b/contatti/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Contatti - Comune di Felicity</title>
   <link rel="stylesheet" href="/style.css">
-  <link rel="shortcut icon" href="assets/logo.png" type="image/x-icon">
+  <link rel="shortcut icon" href="/assets/logo.png" type="image/x-icon">
 </head>
 <body>
   <header>
@@ -16,10 +16,10 @@
     <nav>
       <ul>
         <li><a href="/">Home</a></li>
-        <li><a href="/amministrazione" class="active">Amministrazione</a></li>
+        <li><a href="/amministrazione">Amministrazione</a></li>
         <li><a href="/servizi">Servizi</a></li>
         <li><a href="/news">News</a></li>
-        <li><a href="/contatti">Contatti</a></li>
+        <li><a href="/contatti" class="active">Contatti</a></li>
       </ul>
     </nav>
   </header>
@@ -28,14 +28,14 @@
     <h2>Contatti</h2>
     <p><strong>Indirizzo:</strong> Piazza Municipio 1, 33000 Felicity (UD)</p>
     <p><strong>Telefono:</strong> <a href="tel:+393894757472">0432 955111 </a></p>
-    <p><strong>Email:</strong> <a href="mailto:urp@comune.felicity.fvg.it">urp@comune.felicity.fvg.it</a></p>
-    <p><strong>PEC:</strong> <a href="mailto:cert@comune.felicity.fvg.it">cert@comune.felicity.fvg.it</a></p>
+    <p><strong>Email:</strong> <a href="mailto:info@comunefelicity.eu">info@comunefelicity.eu</a></p>
+    <p><strong>PEC:</strong> <a href="mailto:protocollo@cert.comunefelicity.eu">protocollo@cert.comunefelicity.eu</a></p>
     <p><strong>Orari:</strong> Lunedì - Venerdì 9:00 - 13:00</p>
   </main>
 
   <footer>
     <p>© 2025 Comune di Felicity</p>
-    <p>Email: <a href="mailto:urp@comune.felicity.fvg.it">urp@comune.felicity.fvg.it</a> | PEC: <a href="mailto:cert@comune.felicity.fvg.it">cert@comune.felicity.fvg.it</a></p>
+    <p>Email: <a href="mailto:info@comunefelicity.eu">info@comunefelicity.eu</a> | PEC: <a href="mailto:protocollo@cert.comunefelicity.eu">protocollo@cert.comunefelicity.eu</a></p>
   </footer>
 </body>
 </html>
