--- a/servizi/index.html
+++ b/servizi/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Servizi - Comune di Felicity</title>
   <link rel="stylesheet" href="/style.css">
-  <link rel="shortcut icon" href="assets/logo.png" type="image/x-icon">
+  <link rel="shortcut icon" href="/assets/logo.png" type="image/x-icon">
 </head>
 <body>
   <header>
@@ -16,8 +16,8 @@
     <nav>
       <ul>
         <li><a href="/">Home</a></li>
-        <li><a href="/amministrazione" class="active">Amministrazione</a></li>
-        <li><a href="/servizi">Servizi</a></li>
+        <li><a href="/amministrazione">Amministrazione</a></li>
+        <li><a href="/servizi" class="active">Servizi</a></li>
         <li><a href="/news">News</a></li>
         <li><a href="/contatti">Contatti</a></li>
       </ul>
@@ -39,7 +39,7 @@
 
   <footer>
     <p>© 2025 Comune di Felicity</p>
-    <p>Email: <a href="mailto:urp@comune.felicity.fvg.it">urp@comune.felicity.fvg.it</a> | PEC: <a href="mailto:cert@comune.felicity.fvg.it">cert@comune.felicity.fvg.it</a></p>
+    <p>Email: <a href="mailto:info@comunefelicity.eu">info@comunefelicity.eu</a> | PEC: <a href="mailto:protocollo@cert.comunefelicity.eu">protocollo@cert.comunefelicity.eu</a></p>
   </footer>
 </body>
 </html>
