--- a/servizi/istruzione/index.html
+++ b/servizi/istruzione/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Istruzione - Comune di Felicity</title>
   <link rel="stylesheet" href="/style.css">
-  <link rel="shortcut icon" href="assets/logo.png" type="image/x-icon">
+  <link rel="shortcut icon" href="/assets/logo.png" type="image/x-icon">
 </head>
 <body>
   <header>
@@ -36,13 +36,13 @@
     </ul>
 
     <p><strong>Orari di apertura:</strong> Lunedì - Venerdì: 9:00 - 13:00</p>
-    <p><strong>Telefono:</strong><a href="tel:+390432955665">0432 955665</a></p>
-    <p><strong>Email:</strong><a href="mailto:istruzione@comune.felicity.fvg.it">istruzione@comune.felicity.fvg.it</a></p>
+    <p><strong>Telefono: </strong><a href="tel:+390432955665">0432 955665</a></p>
+    <p><strong>Email: </strong><a href="mailto:istruzione@comunefelicity.eu">istruzione@comunefelicity.eu</a></p>
   </main>
 
   <footer>
     <p>© 2025 Comune di Felicity</p>
-    <p>Email: <a href="mailto:urp@comune.felicity.fvg.it">urp@comune.felicity.fvg.it</a> | PEC: <a href="mailto:cert@comune.felicity.fvg.it">cert@comune.felicity.fvg.it</a></p>
+    <p>Email: <a href="mailto:info@comunefelicity.eu">info@comunefelicity.eu</a> | PEC: <a href="mailto:protocollo@cert.comunefelicity.eu">protocollo@cert.comunefelicity.eu</a></p>
   </footer>
 </body>
 </html>
