--- a/amministrazione/contatta-il-sindaco/index.html
+++ b/amministrazione/contatta-il-sindaco/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Amministrazione - Comune di Felicity</title>
+  <title>Contatta il Sindaco - Comune di Felicity</title>
   <link rel="stylesheet" href="/style.css">
   <link rel="shortcut icon" href="/assets/logo.png" type="image/x-icon">
 </head>
@@ -25,24 +25,27 @@
   </header>
 
   <main>
-    <h2>Amministrazione Comunale</h2>
-    <section>
-      <h3>Il Sindaco</h3>
-      <p style="font-size: 20px;">Tom Nook</p>
-      <a href="/amministrazione/contatta-il-sindaco" style="font-size: 15px; color: darkgoldenrod;">Contatta il Sindaco</a>
-    </section>
-    <section>
-      <h3>Giunta Comunale</h3>
-      <ul>
-        <li>Assessore ai Lavori Pubblici - OnlyFrenck</li>
-        <li>Assessore alla Cultura - Xander</li>
-        <li>Assessore allo Sport - OnlyFrenck</li>
-      </ul>
-    </section>
-    <section>
-      <h3>Consiglio Comunale</h3>
-      <p>Composto da 2 consiglieri eletti dai cittadini.</p>
-    </section>
+    <h2>Contatta il Sindaco</h2>
+    <p>
+      Attraverso questo modulo puoi inviare un messaggio diretto al Sindaco del Comune di Felicity.
+      I cittadini possono proporre idee, segnalare problemi o chiedere chiarimenti.
+    </p>
+
+    <form action="mailto:sindaco@felicity.fvg.it" method="post" enctype="text/plain" class="form-sindaco">
+      <label for="nome">Nome e Cognome:</label>
+      <input type="text" id="nome" name="nome" required>
+
+      <label for="email">Email:</label>
+      <input type="email" id="email" name="email" required>
+
+      <label for="oggetto">Oggetto:</label>
+      <input type="text" id="oggetto" name="oggetto" required>
+
+      <label for="messaggio">Messaggio:</label>
+      <textarea id="messaggio" name="messaggio" rows="6" required></textarea>
+
+      <button type="submit">Invia messaggio</button>
+    </form>
   </main>
 
   <footer>
