--- a/servizi/stato_civile/index.html
+++ b/servizi/stato_civile/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Stato Civile - Comune di Felicity</title>
   <link rel="stylesheet" href="/style.css">
-  <link rel="shortcut icon" href="assets/logo.png" type="image/x-icon">
+  <link rel="shortcut icon" href="/assets/logo.png" type="image/x-icon">
 </head>
 <body>
   <header>
@@ -36,12 +36,13 @@
     </ul>
 
     <p><strong>Orari di apertura:</strong> Lunedì - Venerdì: 9:00 - 12:30</p>
-    <p><strong>Telefono:</strong> 0432 955692</p>
-    <p><strong>Email:</strong> statocivile@comune.felicity.fvg.it</p>
+    <p><strong>Telefono: </strong><a href="tel:+390432955692">0432 955692</a></p>
+    <p><strong>Email: </strong><a href="mailto:statocivile@comunefelicity.eu">statocivile@comunefelicity.eu</a></p>
   </main>
 
   <footer>
     <p>© 2025 Comune di Felicity</p>
+    <p>Email: <a href="mailto:info@comunefelicity.eu">info@comunefelicity.eu</a> | PEC: <a href="mailto:protocollo@cert.comunefelicity.eu">protocollo@cert.comunefelicity.eu</a></p>
   </footer>
 </body>
 </html>
