--- a/amministrazione/contatta-il-sindaco/index.html
+++ b/amministrazione/contatta-il-sindaco/index.html
@@ -31,7 +31,7 @@
       I cittadini possono proporre idee, segnalare problemi o chiedere chiarimenti.
     </p>
 
-    <form action="mailto:sindaco@felicity.fvg.it" method="post" enctype="text/plain" class="form-sindaco">
+    <form action="mailto:sindaco@comunefelicity.eu" method="post" enctype="text/plain" class="form-sindaco">
       <label for="nome">Nome e Cognome:</label>
       <input type="text" id="nome" name="nome" required>
 
