Aggiunto telefono al footer

--- a/contatti/index.html
+++ b/contatti/index.html
@@ -36,6 +36,7 @@
   <footer>
     <p>© 2025 Comune di Felicity</p>
     <p>Email: <a href="mailto:info@comunefelicity.eu">info@comunefelicity.eu</a> | PEC: <a href="mailto:protocollo@cert.comunefelicity.eu">protocollo@cert.comunefelicity.eu</a></p>
+    <p>Telefono: <a href="tel:0432955111">0432/955111</a></p>
   </footer>
 </body>
 </html>
